--- a/css.css
+++ b/css.css
@@ -10,7 +10,7 @@
 }
 
 :root {
-    --bg-color: #000000;
+    --bg-color: white;
     --second-bg-color: #161616;
     --text-color: #fff;
     --main-color: #7b4bb7;
