"black background color"

--- a/css.css
+++ b/css.css
@@ -10,7 +10,7 @@
 }
 
 :root {
-    --bg-color:green;
+    --bg-color:black;
     --second-bg-color: #161616;
     --text-color: #fff;
     --main-color: #7b4bb7;
